fix: z-index for #mapOptions
e.g. must be higher than attribution (and other map controll elemetns)
but lower than nav dropdown and welcome message

--- a/app/assets/stylesheets/las.scss
+++ b/app/assets/stylesheets/las.scss
@@ -118,7 +118,7 @@ li.address-item {
   width:29%;
   max-width: 350px;
   min-width: 300px;
-  z-index:   1100;
+  z-index:   1001; // has to be more than .leaflet-top, .leaflet-bottom, e.g. 1000
   position:  absolute;
   right:     0px;
   background:#FFF;
